--- a/app/src/main/res/layout/card_items.xml
+++ b/app/src/main/res/layout/card_items.xml
@@ -144,6 +144,13 @@
 
 
                 android:src="@drawable/comment"/>
+            <ImageButton
+                android:background="#000000"
+                android:padding="15dp"
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_share"/>
 
 
         </LinearLayout>
